Bug 1126859 - comm-central compilation error: ‘PL_DHashTableLookup’ was not declared in this scope, etc. r=rkent a=bustage fix CLOSED TREE